--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
 
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="restaurants.html">Restaurants</a></li>
+            <li><a href="restuarants.html">Restaurants</a></li>
             <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
             <li><a href="login.html">Login</a></li>
             <li><button id="darkToggle">🌙</button></li>
