--- a/restuarants.html
+++ b/restuarants.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar">
-    <h1 class="logo">FoodExpress</h1>
+    <h1 class="logo">MoonpieFood</h1>
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="restaurants.html">Restaurants</a></li>
