--- a/cart.html
+++ b/cart.html
@@ -2,32 +2,121 @@
 <html>
 <head>
     <title>Your Cart</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
 
-<nav class="navbar">
-    <h1 class="logo">FoodExpress</h1>
+<body style="margin:0; font-family:Arial, sans-serif; background:#f5f5f5;">
+
+<!-- NAVBAR -->
+<nav style="
+    width:100%;
+    background:#ff4d4d;
+    padding:15px 20px;
+    box-sizing:border-box;
+">
+    <h1 style="
+        margin:0;
+        color:white;
+        font-size:24px;
+        font-weight:bold;
+    ">MoonpieFood</h1>
 </nav>
 
-<div class="cart-container">
-    <h2>Your Cart</h2>
+<!-- CART CONTAINER -->
+<div style="
+    max-width:800px;
+    margin:20px auto;
+    background:white;
+    padding:20px;
+    border-radius:10px;
+    box-shadow:0 2px 6px rgba(0,0,0,0.1);
+">
 
-    <table id="cartTable">
+    <h2 style="margin-top:0; text-align:center;">Your Cart</h2>
+
+    <table id="cartTable" style="
+        width:100%;
+        border-collapse:collapse;
+        margin-top:20px;
+    ">
         <thead>
-            <tr>
-                <th>Item</th>
-                <th>Price ($)</th>
-                <th>Remove</th>
+            <tr style="background:#ffcccc;">
+                <th style="padding:12px; border:1px solid #ddd;">Item</th>
+                <th style="padding:12px; border:1px solid #ddd;">Price ($)</th>
+                <th style="padding:12px; border:1px solid #ddd;">Remove</th>
             </tr>
         </thead>
         <tbody></tbody>
     </table>
 
-    <h3>Total: $<span id="total-price">0.00</span></h3>
-    <a href="order.html" class="btn">Proceed to Checkout</a>
+    <h3 style="text-align:right; margin-top:20px;">
+        Total: $<span id="total-price">0.00</span>
+    </h3>
+
+    <a href="order.html" style="
+        display:block;
+        text-align:center;
+        background:#ff4d4d;
+        color:white;
+        padding:12px;
+        margin-top:20px;
+        border-radius:6px;
+        text-decoration:none;
+        font-size:18px;
+    ">Proceed to Checkout</a>
+
 </div>
 
+<!-- MOBILE RESPONSIVE INLINE CSS -->
+<style>
+@media (max-width: 600px) {
+
+    nav h1 {
+        font-size: 20px !important;
+    }
+
+    table thead {
+        display:none;
+    }
+
+    table, table tbody, table tr, table td {
+        display:block;
+        width:100%;
+    }
+
+    table tr {
+        margin-bottom:15px;
+        border:1px solid #ddd;
+        padding:10px;
+        border-radius:6px;
+        background:#fff7f7;
+    }
+
+    table td {
+        text-align:right;
+        padding:8px 5px;
+        position:relative;
+    }
+
+    table td::before {
+        content: attr(data-label);
+        position:absolute;
+        left:0;
+        font-weight:bold;
+        text-align:left;
+    }
+
+    h2 {
+        font-size:22px;
+    }
+
+    a {
+        font-size:16px !important;
+    }
+}
+</style>
+
 <script src="script.js"></script>
+
 </body>
 </html>
