--- a/order.html
+++ b/order.html
@@ -4,25 +4,127 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Form</title>
-    <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-<div class="form-container">
-    <h2>Complete Your Order</h2>
-    <form>
-        <input type="text" placeholder="Full Name">
-        <input type="text" placeholder="Address">
-        <input type="text" placeholder="Phone Number">
-        <select>
-            <option>Select Payment Method</option>
-            <option>Cash on Delivery</option>
-            <option>Credit/Debit Card</option>
-            <option>UPI</option>
+<body style="margin:0; font-family:Arial, sans-serif; background:#f5f5f5;">
+
+
+<div style="
+    max-width:450px;
+    margin:40px auto;
+    background:white;
+    padding:25px;
+    border-radius:10px;
+    box-shadow:0 3px 8px rgba(0,0,0,0.1);
+">
+
+    <h2 style="
+        text-align:center;
+        margin-top:0;
+        margin-bottom:20px;
+        font-size:24px;
+    ">
+        Complete Your Order
+    </h2>
+
+    <form id="orderForm" style="display:flex; flex-direction:column; gap:15px;">
+
+        <input type="text" placeholder="Full Name" required
+            style="
+                padding:12px;
+                font-size:16px;
+                border:1px solid #ccc;
+                border-radius:6px;
+                width:100%;
+                box-sizing:border-box;
+            ">
+
+        <input type="text" placeholder="Address" required
+            style="
+                padding:12px;
+                font-size:16px;
+                border:1px solid #ccc;
+                border-radius:6px;
+                width:100%;
+                box-sizing:border-box;
+            ">
+
+        <input type="text" placeholder="Phone Number" required
+            style="
+                padding:12px;
+                font-size:16px;
+                border:1px solid #ccc;
+                border-radius:6px;
+                width:100%;
+                box-sizing:border-box;
+            ">
+
+        <select id="paymentMethod" required
+            style="
+                padding:12px;
+                font-size:16px;
+                border:1px solid #ccc;
+                border-radius:6px;
+                width:100%;
+                box-sizing:border-box;
+                background:white;
+            ">
+            <option value="">Select Payment Method</option>
+            <option value="payondelivery">Pay on Delivery</option>
+            <option value="stripe">Stripe</option>
+            <option value="card">Pay with Card</option>
         </select>
-        <button class="btn">Place Order</button>
+
+        <button type="submit" style="
+            padding:12px;
+            font-size:18px;
+            background:#ff4d4d;
+            color:white;
+            border:none;
+            border-radius:6px;
+            cursor:pointer;
+        ">
+            Place Order
+        </button>
+
     </form>
 </div>
+
+<!-- REDIRECT SCRIPT -->
+<script>
+document.getElementById("orderForm").addEventListener("submit", function(e) {
+    e.preventDefault(); // stop normal form submit
+
+    const method = document.getElementById("paymentMethod").value;
+
+    if (method === "payondelivery") {
+        window.location.href = "payondelivery.html";
+    } else if (method === "stripe") {
+        window.location.href = "stripe.html";
+    } else if (method === "card") {
+        window.location.href = "card.html";
+    } else {
+        alert("Please select a payment method.");
+    }
+});
+</script>
+
+<!-- RESPONSIVE INLINE CSS -->
+<style>
+@media (max-width: 600px) {
+    div {
+        margin:20px;
+        padding:20px !important;
+    }
+    h2 {
+        font-size:20px !important;
+    }
+    input, select, button {
+        font-size:15px !important;
+        padding:10px !important;
+    }
+}
+</style>
 
 </body>
 </html>
